added more variations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(memory_pool)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(memory_pool main.cpp MemoryPool/MemoryPool.h MemoryPool/MemoryPool.cpp ThreadSafeMemoryPool/MemoryPool.h ThreadSafeMemoryPool/MemoryPool.cpp)
+add_executable(memory_pool main.cpp MemoryPool/MemoryPool.h MemoryPool/MemoryPool.cpp
+        ThreadSafeMemoryPool/MemoryPool.h ThreadSafeMemoryPool/MemoryPool.cpp
+        MoreEfficientMemoryPool/MemoryPool.cpp MoreEfficientMemoryPool/MemoryPool.h
+        ThreadSafeEfficientMemoryPool/MemoryPool.cpp ThreadSafeEfficientMemoryPool/MemoryPool.h)
